--- a/addons/pl_pos_product_bulider/views/extra_component_views.xml
+++ b/addons/pl_pos_product_bulider/views/extra_component_views.xml
@@ -12,6 +12,7 @@
                             <field name="min_qty"/>
                         </group>
                         <group>
+                            <field name="description"/>
                             <field name="product_ids" widget="many2many_tags"/>
                         </group>
                     </sheet>
